Fix re-check images button from missalignment with the documentation button.

--- a/_src/scss/modules/_admin.scss
+++ b/_src/scss/modules/_admin.scss
@@ -8,6 +8,14 @@
       text-align: center;
     }
 
+    .wp-smush-page-header {
+      .sui-actions-right {
+        .sui-button {
+          vertical-align: middle;
+        }
+      }
+    }
+
     .sui-box {
 
       &.sui-summary-smush-nextgen {
